# project

MIT-Racecar-Labs/ta_lab3/: CMakeLists.txt  package.xml  params.yaml
MIT-Racecar-Labs/ta_lab3/scripts/: wall_follow.py
hector_slam/hector_mapping/launch/: mapping_default.launch
hector_slam/hector_slam_launch/rviz_cfg/: mapping_demo.rviz
include/find_object/: Version.h
lane_detection/launch/: one_lane.launch
lane_detection/scripts/: control_wecar.py  e_stop.py  steering_publisher.py
obstacle_detector/launch/: nodes.launch
obstacle_e_stop/: CMakeLists.txt  package.xml
obstacle_e_stop/launch/: obstacle_e_stop.launch
obstacle_e_stop/scripts/: obstacle_e_stop.py
particle_filter/launch/: localize.launch  map_server.launch
particle_filter/maps/: 456.yaml
racecar_gazebo/racecar_control/scripts/: keyboard_teleop.py
racecar_simulator/: params1.yaml
racecar_simulator/launch/: simulate.launch
racecar_simulator/maps/: 0324_1911_map.yaml  abc.yaml
usb_cam/nodes/: usb_cam_node.cpp
wall_follower_sim/src/: wall_follower.py
wecar/launch/: amcl_navigation_wecar.launch  gmapping_wecar.launch  hector_mapping_wecar.launch  lane_detection.launch  pf_navigation_wecar.launch  teleop.launch  wall_follower.launch
wecar/launch/includes/: follow_trajectory_amcl.launch  localize.launch  waypoint_control.launch  waypoint_control_amcl.launch
wecar/map/: class.yaml  classs1.yaml
wecar/rviz/: amcl_navigation.rviz  class.rviz  gmapping_slam.rviz  pf_navigation.rviz  view_sensors.rviz  wall_follower.rviz
wecar/src/: wecar_odom.py
(+7 files in other folders)
