<?xml version="1.0"?>
<package format="2">
  <name>ta_lab3</name>
  <version>1.0.0</version>
  <description>A wall follower for the racecar.</description>
  <maintainer email="racecar@mit.edu">racecar@mit.edu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

</package>
